// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height height = 100 1`] = `
<div
  class="t-table t-size-m"
  defaultexpandedrowkeys=""
  dragsort="drag-col"
  expandicon="true"
  expandonrowclick="false"
  multiplesort="false"
  sortonrowdraggable="false"
  style="position: relative;"
>
  <!---->
  <!---->
  <div
    class="t-table__content"
    style="height: 100px;"
  >
    <!---->
    <table
      class="t-table--layout-fixed"
    >
      <colgroup>
        
        <col />
        <col />
        <col />
        
      </colgroup>
      <thead
        class="t-table__header"
      >
        
        <tr>
          
          <th
            class="t-table__th-id"
            data-colkey="id"
          >
            <div
              class="t-table__th-cell-inner"
            >
              id
            </div>
          </th>
          <th
            class="t-table__th-type"
            data-colkey="type"
          >
            <div
              class="t-table__th-cell-inner"
            >
              类型
            </div>
          </th>
          <th
            class="t-table__th-value"
            data-colkey="value"
          >
            <div
              class="t-table__th-cell-inner"
            >
              取值
            </div>
          </th>
          
        </tr>
        
      </thead>
      <tbody
        class="t-table__body"
      >
        
        <!---->
        
        <tr
          class=""
        >
          
          <td
            class=""
          >
            1
          </td>
          <td
            class=""
          >
            Number
          </td>
          <td
            class=""
          >
            1
          </td>
          
        </tr>
        <tr
          class=""
        >
          
          <td
            class=""
          >
            2
          </td>
          <td
            class=""
          >
            Number
          </td>
          <td
            class=""
          >
            2
          </td>
          
        </tr>
        <tr
          class=""
        >
          
          <td
            class=""
          >
            3
          </td>
          <td
            class=""
          >
            Number
          </td>
          <td
            class=""
          >
            3
          </td>
          
        </tr>
        
        <!---->
        
      </tbody>
      <!---->
    </table>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "large", verticalAlign="top" 1`] = `
<div
  class="t-table t-size-l t-vertical-align-top"
  defaultexpandedrowkeys=""
  dragsort="drag-col"
  expandicon="true"
  expandonrowclick="false"
  multiplesort="false"
  sortonrowdraggable="false"
  style="position: relative;"
>
  <!---->
  <!---->
  <div
    class="t-table__content"
  >
    <!---->
    <table
      class="t-table--layout-fixed"
    >
      <colgroup>
        
        
      </colgroup>
      <thead
        class="t-table__header"
      >
        
        <tr>
          
          
        </tr>
        
      </thead>
      <tbody
        class="t-table__body"
      >
        <tr
          class="t-table__empty-row"
        >
          <td
            colspan="0"
          >
            <div
              class="t-table__empty"
            >
              暂无数据
            </div>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "medium", verticalAlign="bottom" 1`] = `
<div
  class="t-table t-size-m t-vertical-align-bottom"
  defaultexpandedrowkeys=""
  dragsort="drag-col"
  expandicon="true"
  expandonrowclick="false"
  multiplesort="false"
  sortonrowdraggable="false"
  style="position: relative;"
>
  <!---->
  <!---->
  <div
    class="t-table__content"
  >
    <!---->
    <table
      class="t-table--layout-fixed"
    >
      <colgroup>
        
        
      </colgroup>
      <thead
        class="t-table__header"
      >
        
        <tr>
          
          
        </tr>
        
      </thead>
      <tbody
        class="t-table__body"
      >
        <tr
          class="t-table__empty-row"
        >
          <td
            colspan="0"
          >
            <div
              class="t-table__empty"
            >
              暂无数据
            </div>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "small", verticalAlign="middle" 1`] = `
<div
  class="t-table t-size-s t-table--bordered t-table--striped t-table--hoverable"
  defaultexpandedrowkeys=""
  dragsort="drag-col"
  expandicon="true"
  expandonrowclick="false"
  multiplesort="false"
  sortonrowdraggable="false"
  style="position: relative;"
>
  <!---->
  <!---->
  <div
    class="t-table__content"
  >
    <!---->
    <table
      class="t-table--layout-fixed"
    >
      <colgroup>
        
        <col />
        <col />
        <col />
        
      </colgroup>
      <thead
        class="t-table__header"
      >
        
        <tr>
          
          <th
            class="t-table__th-id"
            data-colkey="id"
          >
            <div
              class="t-table__th-cell-inner"
            >
              id
            </div>
          </th>
          <th
            class="t-table__th-type"
            data-colkey="type"
          >
            <div
              class="t-table__th-cell-inner"
            >
              类型
            </div>
          </th>
          <th
            class="t-table__th-value"
            data-colkey="value"
          >
            <div
              class="t-table__th-cell-inner"
            >
              取值
            </div>
          </th>
          
        </tr>
        
      </thead>
      <tbody
        class="t-table__body"
      >
        
        <!---->
        
        <tr
          class=""
        >
          
          <td
            class=""
          >
            1
          </td>
          <td
            class=""
          >
            Number
          </td>
          <td
            class=""
          >
            1
          </td>
          
        </tr>
        <tr
          class=""
        >
          
          <td
            class=""
          >
            2
          </td>
          <td
            class=""
          >
            Number
          </td>
          <td
            class=""
          >
            2
          </td>
          
        </tr>
        <tr
          class=""
        >
          
          <td
            class=""
          >
            3
          </td>
          <td
            class=""
          >
            Number
          </td>
          <td
            class=""
          >
            3
          </td>
          
        </tr>
        
        <!---->
        
      </tbody>
      <!---->
    </table>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Table :props :props.columns \`columns\` is undefined 1`] = `
<div
  class="t-table t-size-m"
  defaultexpandedrowkeys=""
  dragsort="drag-col"
  expandicon="true"
  expandonrowclick="false"
  multiplesort="false"
  sortonrowdraggable="false"
  style="position: relative;"
>
  <!---->
  <!---->
  <div
    class="t-table__content"
  >
    <!---->
    <table
      class="t-table--layout-fixed"
    >
      <colgroup>
        
        
      </colgroup>
      <thead
        class="t-table__header"
      >
        
        <tr>
          
          
        </tr>
        
      </thead>
      <tbody
        class="t-table__body"
      >
        <tr
          class="t-table__empty-row"
        >
          <td
            colspan="0"
          >
            <div
              class="t-table__empty"
            >
              暂无数据
            </div>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Table :props :props.columns \`columns\` with align, width, minWidth and ellipsis 1`] = `
<div
  class="t-table t-size-m"
  defaultexpandedrowkeys=""
  dragsort="drag-col"
  expandicon="true"
  expandonrowclick="false"
  multiplesort="false"
  sortonrowdraggable="false"
  style="position: relative;"
>
  <!---->
  <!---->
  <div
    class="t-table__content"
  >
    <!---->
    <table
      class="t-table--layout-fixed"
    >
      <colgroup>
        
        <col
          style="width: 100px;"
        />
        <col />
        <col />
        
      </colgroup>
      <thead
        class="t-table__header"
      >
        
        <tr>
          
          <th
            class="t-table__th-id"
            data-colkey="id"
          >
            <div
              class="t-table__th-cell-inner"
            >
              <div
                class="t-table__ellipsis t-text-ellipsis"
              >
                
                id
                
              </div>
            </div>
          </th>
          <th
            class="t-table__th-type"
            data-colkey="type"
          >
            <div
              class="t-table__th-cell-inner"
            >
              类型
            </div>
          </th>
          <th
            class="t-table__th-value"
            data-colkey="value"
          >
            <div
              class="t-table__th-cell-inner"
            >
              取值
            </div>
          </th>
          
        </tr>
        
      </thead>
      <tbody
        class="t-table__body"
      >
        
        <!---->
        
        <tr
          class=""
        >
          
          <td
            class="t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              1
              
            </div>
          </td>
          <td
            class=""
          >
            Number
          </td>
          <td
            class=""
          >
            1
          </td>
          
        </tr>
        <tr
          class=""
        >
          
          <td
            class="t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              2
              
            </div>
          </td>
          <td
            class=""
          >
            Number
          </td>
          <td
            class=""
          >
            2
          </td>
          
        </tr>
        <tr
          class=""
        >
          
          <td
            class="t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              3
              
            </div>
          </td>
          <td
            class=""
          >
            Number
          </td>
          <td
            class=""
          >
            3
          </td>
          
        </tr>
        
        <!---->
        
      </tbody>
      <!---->
    </table>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Table :props :props.columns \`columns\` with children 1`] = `
<div
  class="t-table t-size-m t-table--multiple-header"
  defaultexpandedrowkeys=""
  dragsort="drag-col"
  expandicon="true"
  expandonrowclick="false"
  multiplesort="false"
  sortonrowdraggable="false"
  style="position: relative;"
>
  <!---->
  <!---->
  <div
    class="t-table__content"
  >
    <!---->
    <table
      class="t-table--layout-fixed"
    >
      <colgroup>
        
        <col
          style="width: 100px;"
        />
        <col
          style="width: 100px;"
        />
        <col
          style="width: 100px;"
        />
        <col
          style="width: 100px;"
        />
        <col
          style="width: 100px;"
        />
        <col
          style="width: 100px;"
        />
        
      </colgroup>
      <thead
        class="t-table__header t-table__header--multiple"
      >
        
        <tr>
          
          <th
            class=""
            colspan="4"
          >
            <div
              class="t-table__th-cell-inner"
            >
              汇总属性
            </div>
          </th>
          <th
            class=""
            colspan="2"
          >
            <div
              class="t-table__th-cell-inner"
            >
              属性及说明
            </div>
          </th>
          
        </tr>
        <tr>
          
          <th
            class="test t-table__th-platform"
            data-colkey="platform"
            rowspan="2"
          >
            <div
              class="t-table__th-cell-inner"
            >
              <div
                class="t-table__ellipsis t-text-ellipsis"
              >
                
                平台
                
              </div>
            </div>
          </th>
          <th
            class=""
            colspan="3"
          >
            <div
              class="t-table__th-cell-inner"
            >
              类型及默认值
            </div>
          </th>
          <th
            class="test2 t-table__th-property"
            data-colkey="property"
            rowspan="2"
          >
            <div
              class="t-table__th-cell-inner"
            >
              <div
                class="t-table__ellipsis t-text-ellipsis"
              >
                
                属性
                
              </div>
            </div>
          </th>
          <th
            class="row t-table__th-description"
            data-colkey="description"
            rowspan="2"
          >
            <div
              class="t-table__th-cell-inner"
            >
              <div
                class="t-table__ellipsis t-text-ellipsis"
              >
                
                说明
                
              </div>
            </div>
          </th>
          
        </tr>
        <tr>
          
          <th
            class="row t-table__header-th--bordered t-table__th-type"
            data-colkey="type"
          >
            <div
              class="t-table__th-cell-inner"
            >
              <div
                class="t-table__ellipsis t-text-ellipsis"
              >
                
                类型
                
              </div>
            </div>
          </th>
          <th
            class="test4 t-table__th-default"
            data-colkey="default"
          >
            <div
              class="t-table__th-cell-inner"
            >
              <div
                class="t-table__ellipsis t-text-ellipsis"
              >
                
                默认值
                
              </div>
            </div>
          </th>
          <th
            class="test3 t-table__th-needed"
            data-colkey="needed"
          >
            <div
              class="t-table__th-cell-inner"
            >
              <div
                class="t-table__ellipsis t-text-ellipsis"
              >
                
                是否必传
                
              </div>
            </div>
          </th>
          
        </tr>
        
      </thead>
      <tbody
        class="t-table__body"
      >
        
        <!---->
        
        <tr
          class=""
        >
          
          <td
            class="test t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              公有
              
            </div>
          </td>
          <td
            class="row t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              any[]
              
            </div>
          </td>
          <td
            class="test4 t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              []
              
            </div>
          </td>
          <td
            class="test3 t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              Y
              
            </div>
          </td>
          <td
            class="test2 t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              data
              
            </div>
          </td>
          <td
            class="row t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              数据源
              
            </div>
          </td>
          
        </tr>
        <tr
          class=""
        >
          
          <td
            class="test t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              公有
              
            </div>
          </td>
          <td
            class="row t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              String
              
            </div>
          </td>
          <td
            class="test4 t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              -1
              
            </div>
          </td>
          <td
            class="test3 t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              Y
              
            </div>
          </td>
          <td
            class="test2 t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              rowkey
              
            </div>
          </td>
          <td
            class="row t-table-td--ellipsis"
          >
            <div
              class="t-table__ellipsis t-text-ellipsis"
            >
              
              指定rowkey
              
            </div>
          </td>
          
        </tr>
        
        <!---->
        
      </tbody>
      <!---->
    </table>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Table :props :props.columns \`columns\` with fixed column 1`] = `
<div
  class="t-table t-size-m t-table--column-fixed"
  defaultexpandedrowkeys=""
  dragsort="drag-col"
  expandicon="true"
  expandonrowclick="false"
  multiplesort="false"
  sortonrowdraggable="false"
  style="position: relative;"
>
  <!---->
  <!---->
  <div
    class="t-table__content"
  >
    <!---->
    <table
      class="t-table--layout-fixed"
    >
      <colgroup>
        
        <col />
        <col />
        <col />
        
      </colgroup>
      <thead
        class="t-table__header"
      >
        
        <tr>
          
          <th
            class="t-table__th-id"
            data-colkey="id"
          >
            <div
              class="t-table__th-cell-inner"
            >
              id
            </div>
          </th>
          <th
            class="t-table__th-type"
            data-colkey="type"
          >
            <div
              class="t-table__th-cell-inner"
            >
              类型
            </div>
          </th>
          <th
            class="t-table__th-value"
            data-colkey="value"
          >
            <div
              class="t-table__th-cell-inner"
            >
              取值
            </div>
          </th>
          
        </tr>
        
      </thead>
      <tbody
        class="t-table__body"
      >
        
        <!---->
        
        <tr
          class=""
        >
          
          <td
            class=""
          >
            1
          </td>
          <td
            class=""
          >
            Number
          </td>
          <td
            class=""
          >
            1
          </td>
          
        </tr>
        <tr
          class=""
        >
          
          <td
            class=""
          >
            2
          </td>
          <td
            class=""
          >
            Number
          </td>
          <td
            class=""
          >
            2
          </td>
          
        </tr>
        <tr
          class=""
        >
          
          <td
            class=""
          >
            3
          </td>
          <td
            class=""
          >
            Number
          </td>
          <td
            class=""
          >
            3
          </td>
          
        </tr>
        
        <!---->
        
      </tbody>
      <!---->
    </table>
  </div>
  <!---->
  <!---->
</div>
`;
